--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
@@ -84,82 +84,83 @@
     </section>
 
     <section class='menu'>
-        
-        <h2 class="menu__title">Menu</h2>
-        <div class="menu__box">
-            <div class="menu__cell">
-                <img src="http://www.fusushi.co.il/warehouse/dynamic/50867.jpg" alt="">
-                <p>Soups</p>
-            </div>
-            <div class="menu__cell">
-                <img src="http://www.fusushi.co.il/warehouse/dynamic/50866.jpg" alt="">
-                <p>Salads</p>
-            </div>
-            <div class="menu__cell">
-                <img src="http://www.fusushi.co.il/warehouse/dynamic/91136.jpg" alt="">
-                <p>Ban</p>
-            </div>
-            <div class="menu__cell">
-                <img src="http://www.fusushi.co.il/warehouse/dynamic/92764.jpg" alt="">
-                <p>Robatayaki</p>
-            </div>
-            <div class="menu__cell">
-                <img src="http://www.fusushi.co.il/warehouse/dynamic/91137.jpg" alt="">
-                <p>Gyoza</p>
-            </div>
-            <div class="menu__cell">
-                <img src="http://www.fusushi.co.il/warehouse/dynamic/51708.jpg" alt="">
-                <p>Appetizers</p>
-            </div>
-            <div class="menu__cell">
-                <img src="http://www.fusushi.co.il/warehouse/dynamic/91138.jpg" alt="">
-                <p>Special Gonkanmaki</p>
-            </div>
-            <div class="menu__cell">
-                <img src="http://www.fusushi.co.il/warehouse/dynamic/51711.jpg" alt="">
-                <p>Inside Out</p>
-            </div>
-            <div class="menu__cell">
-                <img src="http://www.fusushi.co.il/warehouse/dynamic/51710.jpg" alt="">
-                <p>Specials</p>
-            </div>
-            <div class="menu__cell">
-                <img src="http://www.fusushi.co.il/warehouse/dynamic/74627.jpg" alt="">
-                <p>Kids Dishes</p>
-            </div>
-            <div class="menu__cell">
-                <img src="http://www.fusushi.co.il/warehouse/dynamic/92765.jpg" alt="">
-                <p>Main Dishes</p>
-            </div>
-            <div class="menu__cell">
-                <img src="http://www.fusushi.co.il/warehouse/dynamic/50868.jpg" alt="">
-                <p>Wok</p>
-            </div>
-            <div class="menu__cell">
-                <img src="http://www.fusushi.co.il/warehouse/dynamic/91376.jpg" alt="">
-                <p>Cokctails</p>
-            </div>
-            <div class="menu__cell">
-                <img src="http://www.fusushi.co.il/warehouse/dynamic/50881.jpg" alt="">
-                <p>Combinations</p>
-            </div>
-            <div class="menu__cell">
-                <img src="http://www.fusushi.co.il/warehouse/dynamic/50879.jpg" alt="">
-                <p>Sashimi</p>
-            </div>
-            <div class="menu__cell">
-                <img src="http://www.fusushi.co.il/warehouse/dynamic/50877.jpg" alt="">
-                <p>Nigiri</p>
-            </div>
-            <div class="menu__cell">
-                <img src="http://www.fusushi.co.il/warehouse/dynamic/50875.jpg" alt="">
-                <p>Sandwich Sushi</p>
-            </div>
-            <div class="menu__cell">
-                <img src="http://www.fusushi.co.il/warehouse/dynamic/50871.jpg" alt="">
-                <p>Maki Sushi</p>
-            </div>
+        <div class="menuopacity">
+            <h2 class="menu__title">Menu</h2>
+            <div class="menu__box">
+                <div class="menu__cell">
+                    <div class="picwrap"><img src="http://www.fusushi.co.il/warehouse/dynamic/50867.jpg" alt=""></div>
+                    <p>Soups</p>
+                </div>
+                <div class="menu__cell">
+                    <div class="picwrap"><img src="http://www.fusushi.co.il/warehouse/dynamic/50866.jpg" alt=""></div>
+                    <p>Salads</p>
+                </div>
+                <div class="menu__cell">
+                    <div class="picwrap"><img src="http://www.fusushi.co.il/warehouse/dynamic/91136.jpg" alt=""></div>
+                    <p>Buns</p>
+                </div>
+                <div class="menu__cell">
+                    <div class="picwrap"> <img src="http://www.fusushi.co.il/warehouse/dynamic/92764.jpg" alt=""></div>
+                    <p>Robta Yaki</p>
+                </div>
+                <div class="menu__cell">
+                    <div class="picwrap"><img src="http://www.fusushi.co.il/warehouse/dynamic/91137.jpg" alt=""></div>
+                    <p>Gyoza</p>
+                </div>
+                <div class="menu__cell">
+                    <div class="picwrap"><img src="http://www.fusushi.co.il/warehouse/dynamic/51708.jpg" alt=""></div>
+                    <p>Appetizers</p>
+                </div>
+                <div class="menu__cell">
+                    <div class="picwrap"> <img src="http://www.fusushi.co.il/warehouse/dynamic/91138.jpg" alt=""></div>
+                    <p>Special Gonkan maki</p>
+                </div>
+                <div class="menu__cell">
+                    <div class="picwrap"><img src="http://www.fusushi.co.il/warehouse/dynamic/51711.jpg" alt=""></div>
+                    <p>Inside Out</p>
+                </div>
+                <div class="menu__cell">
+                    <div class="picwrap"><img src="http://www.fusushi.co.il/warehouse/dynamic/51710.jpg" alt=""></div>
+                    <p>Specials</p>
+                </div>
+                <div class="menu__cell">
+                    <div class="picwrap"><img src="http://www.fusushi.co.il/warehouse/dynamic/74627.jpg" alt=""></div>
+                    <p>Kids Dishes</p>
+                </div>
+                <div class="menu__cell">
+                    <div class="picwrap"> <img src="http://www.fusushi.co.il/warehouse/dynamic/92765.jpg" alt=""></div>
+                    <p>Main Dishes</p>
+                </div>
+                <div class="menu__cell">
+                    <div class="picwrap"><img src="http://www.fusushi.co.il/warehouse/dynamic/50868.jpg" alt=""></div>
+                    <p>Wok</p>
+                </div>
+                <div class="menu__cell">
+                    <div class="picwrap"><img src="http://www.fusushi.co.il/warehouse/dynamic/91376.jpg" alt=""></div>
+                    <p>Cokctails</p>
+                </div>
+                <div class="menu__cell">
+                    <div class="picwrap"><img src="http://www.fusushi.co.il/warehouse/dynamic/50881.jpg" alt=""></div>
+                    <p>Combinations</p>
+                </div>
+                <div class="menu__cell">
+                    <div class="picwrap"> <img src="http://www.fusushi.co.il/warehouse/dynamic/50879.jpg" alt=""></div>
+                    <p>Sashimi</p>
+                </div>
+                <div class="menu__cell">
+                    <div class="picwrap"> <img src="http://www.fusushi.co.il/warehouse/dynamic/50877.jpg" alt=""></div>
+                    <p>Nigiri</p>
+                </div>
+                <div class="menu__cell">
+                    <div class="picwrap"> <img src="http://www.fusushi.co.il/warehouse/dynamic/50875.jpg" alt=""></div>
+                    <p>Sandwich Sushi</p>
+                </div>
+                <div class="menu__cell">
+                    <div class="picwrap"> <img src="http://www.fusushi.co.il/warehouse/dynamic/50871.jpg" alt=""></div>
+                    <p>Maki Sushi</p>
+                </div>
 
+            </div>
         </div>
     </section>
 
