--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/shani try/shaniowner.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/shani try/shaniowner.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
+    <form onsubmit='handleSubmit(event)'>
+        <input type="text" name="nameOfItem" placeholder="name of item" required>
+        <input type='number' name="price" placeholder="enter price" required>
+        <input type="text" name="type" placeholder="JEWELRY or BAG">
+        <input type="submit" value="ADD">
+    </form>
     <script src="dist/shanicustomer.js"></script>
 </body>
 </html>
