--- a/02-JavaScript/08-forms/MichZap/index.html
+++ b/02-JavaScript/08-forms/MichZap/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="dist/index.css">
 </head>
 <body>
-    <form onsubmit="handleSubmit(event)" >
-        <input type="text" name="item" placeholder="Enter Description" required>
-        <input type="number" name="price" placeholder="Enter Price" required>
+    <form onsubmit='handleSubmit(event)' class="form1" >
+        <input type="text" name="itemName" placeholder="Enter Description" required>
+        <input type="number" name="itemPrice" placeholder="Enter Price" required>
         <input name="submit" value="add Item" type="submit">
     </form>
     <input type="button" value="prices high to low">
