--- a/01-HTML-CSS/07-SCSS/chaim/index.html
+++ b/01-HTML-CSS/07-SCSS/chaim/index.html
@@ -12,6 +12,7 @@
     <div class="wrapper">
     <div class="card">
   <img src="1.jpg" alt="">
+  <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fst-adidas-isr.mncdn.com%2Fmnresize%2F415%2F415%2Fcontent%2Fimages%2Fthumbs%2F0002533_superstar-shoes_eg4959_side-lateral-center-view.jpeg&imgrefurl=https%3A%2F%2Fwww.adidas.co.il%2F&tbnid=RVb4VS4wIdWz5M&vet=12ahUKEwimhonQ29f1AhXJ3oUKHSS7A6oQMygEegUIARCMAw..i&docid=ctJC9Y1NgYE96M&w=415&h=415&itg=1&q=adidas&ved=2ahUKEwimhonQ29f1AhXJ3oUKHSS7A6oQMygEegUIARCMAw">
  <p>jvnvjvnclzkm</p></div>
   <div class="card">
   <img src="2.jpg" alt="">
