--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/owner.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/owner.html
@@ -15,7 +15,7 @@
         <input type="number" name="price" placeholder="price">
         <input type="text" name="img" placeholder="img">
         
-        <select  name="group" id="" onchange="handleSelectGroup">
+        <select  name="group" id="">
             <option value="group" disabled selected>gruop</option>
             <option value="AUTOMATIC WATCHES">AUTOMATIC WATCHES</option>
             <option value="CLASSIC WATCHES">CLASSIC WATCHES</option>
@@ -25,7 +25,7 @@
             <option value="NEW RELEASES">NEW RELEASES</option>
             <option value="SPORT WATCHES">SPORT WATCHES</option>
         </select>
-        <select name="Collection" id="" onchange="handleSelectCollection">
+        <select name="Collection" id="" >
             <option value="collection" disabled selected>collection</option>
             <option value="AIRCOBRA">AIRCOBRA</option>
             <option value="BRISTOL">BRISTOL</option>
@@ -33,7 +33,7 @@
             <option value="MIG">MIG</option>
             <option value="MOONFLIGHT">MOONFLIGHT</option>
         </select>
-        <select name="function" id="" onchange="handleSelectFunction">
+        <select name="function" id="">
             <option value="function" disabled selected>function</option>
             <option value="Chronograph">Chronograph</option>
             <option value="Day / Date">Day / Date</option>
@@ -41,12 +41,12 @@
             <option value="Oversized Date">Oversized Date</option>
             <option value="Small Second">Small Second</option>
         </select>
-        <select name="movement" id="" onchange="handleSelectMovement">
+        <select name="movement" id="" >
             <option value="movement" disabled selected>movement</option>
             <option value="Automatic">Automatic</option>
             <option value="Quartz">Quartz</option>
         </select>
-        <select name="case" id="" onchange="handleSelectCase">
+        <select name="case" id="">
             <option value="case" disabled selected>case</option>
             <option value="Black PVD">Black PVD</option>
             <option value="Brown PVD">Brown PVD</option>
@@ -55,7 +55,7 @@
             <option value="Rose Gold PVD">Rose Gold PVD</option>
             <option value="Stainless Steel">Stainless Steel</option>
         </select>
-        <select name="diameter" id="" onchange="handleSelectDiameter">
+        <select name="diameter" id="" >
             <option value="diameter" disabled selected>diameter</option>
             <option value="36 mm">36 mm</option>
             <option value="41.20 mm">41.20 mm</option>
@@ -64,7 +64,7 @@
             <option value="46 mm">46 mm</option>
             <option value="47 mm">47 mm</option>
         </select>
-        <select name="dial" id="" onchange="handleSelectDial">
+        <select name="dial" id="">
             <option value="dial" disabled selected>dial</option>
             <option value="Beige">Beige</option>
             <option value="Black">Black</option>
@@ -80,7 +80,7 @@
             <option value="Silver">Silver</option>
             <option value="White">White</option>
         </select>
-        <select name="bracelet" id="" onchange="handleSelectBracelet">
+        <select name="bracelet" id="">
             <option value="bracelet" disabled selected>bracelet</option>
             <option value="Leather">Leather</option>
             <option value="Rubber">Rubber</option>
