--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/index.html
@@ -14,7 +14,7 @@
     </nav>
     <h1>Store</h1>
     
-    <div onmouseover="handleAddProducts()">Show Products</div>
+    <div onmouseover="handleShowClothes()">Show Products</div>
     <div id="root"></div>
 
     <script src="dist/index.js"></script>
