--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/owner.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/owner.html
@@ -86,7 +86,7 @@
             <option value="Rubber">Rubber</option>
             <option value="Steel">Steel</option>
         </select>
-        <input type="submit" value="Add">
+        <input type="submit" value="Add" name="send">
     </form>
     <script src="dist/owner.js"></script>
 </body>
