--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/erp.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/erp.html
@@ -13,12 +13,11 @@
         <a href="./erp.html">ERP</a>
     </nav>
     <h1>Store ERP</h1>
-    <form onsubmit="handleAddMoreProducts(event)">
-        <input id="itemName" type="text" name="item" placeholder="item-name">
+    <form onsubmit="handleAddclothes(event)">
+        <input id="itemName" type="text" name="name" placeholder="item-name">
         <input id="price" type= "number" name="price" placeholder="item-price">
         <input type="submit" value="add-Product">
     </form>
     <script src="dist/index.js"></script>
-    <script src="dist/2ndType.js"></script>
 </body>
 </html>
