--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
@@ -88,6 +88,10 @@
             <h2 class="menu__title">Menu</h2>
             <div class="menu__box">
                 <div class="menu__cell">
+                    <div class="picwrap"><img src="http://www.fusushi.co.il/warehouse/dynamic/51708.jpg" alt=""></div>
+                    <p>Firsts</p>
+                </div>
+                <div class="menu__cell">
                     <div class="picwrap"><img src="http://www.fusushi.co.il/warehouse/dynamic/50867.jpg" alt=""></div>
                     <p>Soups</p>
                 </div>
@@ -106,10 +110,6 @@
                 <div class="menu__cell">
                     <div class="picwrap"><img src="http://www.fusushi.co.il/warehouse/dynamic/91137.jpg" alt=""></div>
                     <p>Gyoza</p>
-                </div>
-                <div class="menu__cell">
-                    <div class="picwrap"><img src="http://www.fusushi.co.il/warehouse/dynamic/51708.jpg" alt=""></div>
-                    <p>Appetizers</p>
                 </div>
                 <div class="menu__cell">
                     <div class="picwrap"> <img src="http://www.fusushi.co.il/warehouse/dynamic/91138.jpg" alt=""></div>
@@ -167,6 +167,8 @@
     <section class='popmenu'>
 
     </section>
+
+    <script src='dist/index.js'></script>
 </body>
 
 </html>
