--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/owner.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/owner.html
@@ -88,6 +88,8 @@
         </select>
         <input type="submit" value="Add" name="send">
     </form>
+
+   <div id="root"></div>
     <script src="dist/owner.js"></script>
 </body>
 
