--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Yossi_Yael_Will_Artur/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Yossi_Yael_Will_Artur/index.html
@@ -5,10 +5,56 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="dist/style.css">
+    <script src="https://kit.fontawesome.com/d13a0d855d.js" crossorigin="anonymous"></script>
     <title>Gucci</title>
 </head>
 <body>
-    <div id="wrapper"></div>
+    <div class="header">
+        <div class="header__navBarTop">
+            <i class="fas fa-search"></i>
+
+
+
+
+        </div>
+        <div class="header__navBarMiddle">
+            <h1>Gucci</h1>
+
+
+
+
+        </div>
+        <div class="header__navBarBottom"></div>
+
+    </div>
+    <div class="main">
+        <div class="main__item">
+
+        </div>
+        <div class="main__item">
+            
+        </div>
+        <div class="main__item">
+
+        </div>
+        <div class="main__item">
+
+        </div>
+        <div class="main__item">
+
+        </div>
+        <div class="main__item">
+
+        </div>
+        <div class="main__item">
+
+        </div>
+        <div class="main__item">
+
+        </div>
+    </div>
+    <div class="imgBottom"></div>
+    <div class="footer"></div>
     <script src="dist/index.js"></script>
 </body>
 </html>
