--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/customer.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/customer.html
@@ -40,24 +40,48 @@
     <div class="header__sort">
 
         <select onchange="handlePriceRange(event)">
+            <option value="" disabled selected>price</option>
+
             <option value="priceRange">
+                price range
+                </option>
         </select>
 
         <select onchange="handleShoeSize(event)">
-            <option value="shoeSize">
+            <option value="" disabled selected>shoe</option>
+
+            <option value="shoeSize" >
+                shoe size
                 <input type="range">
             </option>
         </select>
 
         <select onchange="handleGender(event)">
+            <option value="" disabled selected>gender</option>
+
             <option value="gender">
+                gender
         </select>
 
         <select onchange="handleColor(event)">
+            <option value="" disabled selected>color</option>
+
             <option value="color">
+                color
         </select>
 
+        <select onchange="handleType(event)">
+            <option value="" disabled selected>type</option>
+
+            <option value="sneakers"> </option>
+            <option value="boots"> </option>
+            <option value="hi tops"> </option>
+            <option value="flip flops"> </option>
+    
+        </select>
         <select onchange="handleSort(event)">
+            <option value="" disabled selected>sort</option>
+
             <option value="startPosition"> </option>
             <option value="letterAsc"> </option>
             <option value="letterDsc"> </option>
@@ -68,6 +92,7 @@
     </div>
 
     <div class="cards">
+
         <div class="cards__item">
             <div class="cards__item--like"></div>
             <div class="picture">
@@ -142,6 +167,11 @@
             <div></div>
         </div>
     </div>
+
+    <div id="rootCart"></div>
+    <div id="wishList"></div>
+
+    <script src="dist/customer.js"> </script>
 </body>
 
 </html>
