--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Yossi_Yael_Will_Artur/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Yossi_Yael_Will_Artur/index.html
@@ -11,6 +11,8 @@
 <body>
     <div class="header">
         <div class="header__navBarTop">
+            <h1 class="header__Gucci">Gucci</h1>
+
             <i class="fas fa-search"></i>
 
 
@@ -18,7 +20,6 @@
 
         </div>
         <div class="header__navBarMiddle">
-            <h1>Gucci</h1>
 
 
 
