--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
@@ -165,7 +165,7 @@
     </section>
 
     <section class='popmenu'>
-
+        <div id="root" ></div>
     </section>
 
     <script src='dist/index.js'></script>
