--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/erp.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/erp.html
@@ -46,7 +46,7 @@
     <div id="root"></div>
 
 
-    <script src="/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/dist/index.js"></script>
+    <script src="dist/index.js"></script>
 </body>
 
 </html>
