--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/erp.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/erp.html
@@ -16,6 +16,27 @@
     <form onsubmit="handleAddclothes(event)">
         <input id="itemName" type="text" name="name" placeholder="item-name">
         <input id="price" type= "number" name="price" placeholder="item-price">
+        <select>
+            <option value="" disabled selected>Choose a department</option>
+            <option value="clothes">clothes</option>
+            <option value="watches">watches</option>       
+            <option value="jewelry">jewelry</option>
+            <option value="bags">bags</option>
+        </select>
+        <select >
+            <option value="" disabled selected>Choose a gender</option>
+            <option value="clothes">men</option>
+            <option value="clothes">women</option>
+        </select>
+            <select>
+                <option value="" disabled selected>Choose a type</option>
+                <option value="t-shirts">t-shirt</option>
+                <option value="pants">women</option>
+                <option value="shoes">women</option>
+                <option value="jewelry">women</option>
+                <option value="watches">women</option>
+                <option value="bags">women</option>
+            </select>
         <input type="submit" value="add-Product">
     </form>
     <script src="dist/index.js"></script>
