--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/owner.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/owner.html
@@ -165,7 +165,8 @@
             <option value="Rubber">Rubber</option>
             <option value="Steel">Steel</option>
         </select>
-        <input type="submit" value="Update" name="send">
+        <input type="text" name="id" disabled>
+        <input type="submit" value="Update" name="send" class="">
     </form>
    <div id="root"></div>
     <script src="dist/owner.js"></script>
