--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/erp.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/erp.html
@@ -26,7 +26,7 @@
         <select id="selectGender">
             <option value="" disabled selected>Choose a gender</option>
             <option value="men">men</option>
-            <option value="women">women</option>
+            <option value="womenz">women</option>
         </select>
             <select id="selectType">
                 <option value="" disabled selected>Choose a type</option>
