remove , img update

--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/erp.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/erp.html
@@ -15,10 +15,9 @@
         <a href="./erp.html">ERP</a>
     </nav>
     <h1>Store ERP</h1>
-    <form onsubmit="handleremoveItems(event)">
+    <form onsubmit="handleRemoveItems(event)">
         <input type="text" name="remove" id="remove" placeholder="Enter item to remove">
-        <input id="removeBtn" type="submit" value="REMOVE ITEM">
-        <hr>
+        <input id="removeBtn" type="submit" value="Remove">
     </form>
     <form onsubmit="handleAddclothes(event)">
         <input id="itemName" type="text" name="name" placeholder="item-name">
