--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/chaim , michael ido/customer.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/chaim , michael ido/customer.html
@@ -35,10 +35,10 @@
              <div id="sortANDfilterBtnsPants"  class="container_sortANDfilterBtns-box"></div>
          </div>
          <div class="container_catagories-display">
-             <div class="container_catagories-display-card">
+             <!-- <div class="container_catagories-display-card"> -->
                  <!-- <div class="container_catagories-display-card-details"></div>
                <div id="itemImg" class="container_catagories-display-card-img"></div> -->
-             </div>
+             <!-- </div> -->
          </div>
 
 
