--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/womenGucci.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/womenGucci.html
@@ -153,11 +153,14 @@
                 <p>Belted optical print silk dress</p>
                 <p>4,980</p>
             </div>
-            <div class="itemSilkDress">
-                <img src="https://media.gucci.com/style/DarkGray_South_0_160_316x316/1635527707/664317_Z8AWG_9791_001_100_0000_Light-Belted-optical-print-silk-dress.jpg">
+            <div class="itemSilkDressTest">
+                <img src="https://media.gucci.com/style/DarkGray_South_0_160_316x316/1635527707/664317_Z8AWG_9791_001_100_0000_Light-Belted-optical-print-silk-dress.jpg" alt="Card Back">
                 <p>Belted optical print silk dress</p>
                 <p>4,980</p>
+                <img src="https://media.gucci.com/style/White_South_0_40_632x790/1635527709/664317_Z8AWG_9791_002_100_0000_Light.jpg" class="img-top" alt="Card Front">
+
             </div>
+           
 
 
         </div>
