--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/chaim , michael ido/customer.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/chaim , michael ido/customer.html
@@ -7,6 +7,9 @@
     <script src="https://kit.fontawesome.com/d13a0d855d.js" crossorigin="anonymous"></script>  
     <link rel="stylesheet" href="dist/taskFilter.css">
     <title>customer page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 </head>
 <body onload="set_timeImgs()">
 
