--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/yahia,michael,leon/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/yahia,michael,leon/index.html
@@ -39,7 +39,7 @@
     </div>
 </div>
 <div class="_main_cta_boxes">
-<div class="box1"><button name="shoes" value="Nike air jordan 130$" onclick="handleCart(event)">Shop FlyEase</button> </div>
+<div class="box1"><button name="shoes" id="shoes" value="Nike air jordan 130$" onclick="handleCart(event)">Shop FlyEase</button> </div>
     <div class="box1">Shop Kids</div>
     <div class="box2"><i class="fas fa-shopping-cart"> </i></div>
 </div>
