--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/erp.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/erp.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,19 +8,21 @@
     <title>Store-ERP</title>
     <link rel="stylesheet" href="dist/style.css">
 </head>
+
 <body class="erp">
     <nav>
         <a href="./index.html">Store</a>
         <a href="./erp.html">ERP</a>
     </nav>
     <h1>Store ERP</h1>
-    <form onsubmit="handleAddclothes(event)">
+    <input type="button" value="showItems" onclick="handleShowItems()">
+    <form onsubmit="handleAddItems(event)">
         <input id="itemName" type="text" name="name" placeholder="item-name">
-        <input id="price" type= "number" name="price" placeholder="item-price">
+        <input id="price" type="number" name="price" placeholder="item-price">
         <select id="selectDepartment">
             <option value="" disabled selected>Choose a department</option>
             <option value="clothes">clothes</option>
-            <option value="watches">watches</option>       
+            <option value="watches">watches</option>
             <option value="jewelry">jewelry</option>
             <option value="bags">bags</option>
         </select>
@@ -28,17 +31,23 @@
             <option value="men">men</option>
             <option value="women">women</option>
         </select>
-            <select id="selectType">
-                <option value="" disabled selected>Choose a type</option>
-                <option value="t-shirts">t-shirt</option>
-                <option value="pants">women</option>
-                <option value="shoes">women</option>
-                <option value="jewelry">women</option>
-                <option value="watches">women</option>
-                <option value="bags">women</option>
-            </select>
+        <select id="selectType">
+            <option value="" disabled selected>Choose a type</option>
+            <option value="t-shirts">t-shirt</option>
+            <option value="pants">pants</option>
+            <option value="shoes">shoes</option>
+            <option value="jewelry">jewelry</option>
+            <option value="watches">watches</option>
+            <option value="bags">bags</option>
+        </select>
         <input type="submit" value="add-Product">
     </form>
+    <form onsubmit="handleRemoveItems(event)">
+        <input type="text" name="remove" id="remove" placeholder="Enter item Name to Remove">
+        <input id="removeBtn" type="submit" value="remove">
+    </form>
+    <input type="file" id="myImageInput">
     <script src="dist/index.js"></script>
 </body>
+
 </html>
