--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Yossi_Yael_Will_Artur/indexOwner.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Yossi_Yael_Will_Artur/indexOwner.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="dist/style.css">
-    <title>ZAP</title>
+    <title>gucci owner</title>
 </head>
 
     <body class="bodyOwner">
     <div class="headerOwner">
-
-
+        <button class="headerOwner__btn"><a href="indexStore.html">store</a></button>
+        <button class="headerOwner__btn"><a href="indexOwner.html">owner</a></button>
     </div>
     <hr>
 
