--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John/bokkie.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John/bokkie.html
@@ -5,11 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="dist/bokkie.css">
+    <script src="https://kit.fontawesome.com/01fab75280.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
     <div class="wrapper">
-        <div class="navBar"></div>
+        <div class="navBar">
+            <div class="navBar__menu"><i class="fas fa-bars"></i>Menu</div>
+            <div class="navBar__logo">Bookie</div>
+            <div class="navBar__item"><i class="fas fa-shopping-cart"></i></div>
+            <div class="navBar__item"><i class="fas fa-map-marker-alt"></i></div>
+            <div class="navBar__item"><i class="fas fa-search"></i>
+
+            </div>
+        </div>
+        <div class="banner"><img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Nm_toronto_university_of_toronto_library.jpg" alt=""></div> 
+        <div class="filters">
+            <div class="filters__category"></div>
+            <div class="filters__filters"></div>
+            <div class="filters__sortBy"></div>
+        </div>
+        <div class="rootBooks"></div>
+        <div class="secondaryNav"></div>
     </div>
     <script src="dist/bokkie.js"></script>
 </body>
